// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment_after.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---
/* comment */
.something {
}

=====================================output=====================================
---
title: Title
description: Description
---

/* comment */
.something {
}

================================================================================
`;

exports[`dirty.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
hello:     world
a:       
            - 123
            - 666
---

.class {



}

=====================================output=====================================
---
hello: world
a:
  - 123
  - 666
---

.class {
}

================================================================================
`;

exports[`empty.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
---

a {
    color: red;
}

=====================================output=====================================
---
---

a {
  color: red;
}

================================================================================
`;

exports[`empty_newlines.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---



---



a {
    color: red;
}

=====================================output=====================================
---
---

a {
  color: red;
}

================================================================================
`;

exports[`ignore.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
hello: world
---

/* prettier-ignore */
.foo {}

=====================================output=====================================
---
hello: world
---

/* prettier-ignore */
.foo {}

================================================================================
`;

exports[`malformed.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
aaa
b---

a {
    color: red;
}
=====================================output=====================================
--- aaa b--- a {
  color: red;
}

================================================================================
`;

exports[`malformed-2.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
foo: bar
---

a {
color:blue
}

---

.b {
color:red
}
=====================================output=====================================
---
foo: bar
---

a {
  color: blue;
}

--- .b {
  color: red;
}

================================================================================
`;

exports[`only_comments.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
# comment 1
# comment 2
# comment 3
---

a {
    color: red;
}

=====================================output=====================================
---
# comment 1
# comment 2
# comment 3
---

a {
  color: red;
}

================================================================================
`;

exports[`with_comments.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
# This is a comment
---

a {
    color: red;
}
=====================================output=====================================
---
title: Title
description: Description
# This is a comment
---

a {
  color: red;
}

================================================================================
`;

exports[`without-newline-after.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---
a {
    color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;

exports[`yaml.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---

a {
    color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;

exports[`yaml.less - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---

a {
  color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;

exports[`yaml.scss - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
title: Title
description: Description
---

a {
  color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;
